Fixes broken sidebar. Hopefully aligns header and footer.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,7 +258,7 @@ h3 {
 }
 
 #header {
-    width: 80%;
+    width: 64%;
     margin: 40px auto 50px auto;
 }
 #header h1 {
@@ -270,7 +270,7 @@ h3 {
 }
 
 #footer {
-    width: 80%;
+    width: 64%;
     margin: 50px auto 20px auto;
     padding-top: 10px;
     font-size: 0.85em;
@@ -287,7 +287,7 @@ h3 {
     text-align: right;
     width: 20%;
     top: 0;
-    left: -30%;
+    left: -240px;
 }
 
 #sidebar li {
